--- a/index.html
+++ b/index.html
@@ -192,12 +192,16 @@
         .material-thumbnail {
             height: 180px;
             overflow: hidden;
+            background: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .material-thumbnail img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
             transition: transform 0.5s ease;
         }
 
@@ -327,6 +331,7 @@
         .modal-img {
             max-width: 100%;
             max-height: 80vh;
+            object-fit: contain;
         }
 
         .close-modal {
