--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
   const SUPABASE_URL = "https://flccihxefysoqfmrnqgt.supabase.co";
-  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...";
+  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZsY2NpaHhlZnlzb3FmbXJucWd0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTcwMzMyODQsImV4cCI6MjA3MjYwOTI4NH0.xd0yLzIt_sLRGl5KCJjW77oY4l6iiBEvVtnK69nhfBk";
   const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
   const MAX_FILE_SIZE = 10*1024*1024;
 
@@ -264,3 +264,4 @@
 </script>
 </body>
 </html>
+
