--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
             transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
         }
         body.dark-mode [contenteditable="true"]:empty:before {
+            content: attr(placeholder);
             color: rgba(224, 224, 224, 0.6);
+            pointer-events: none;
+            display: block;
             transition: color 0.3s ease;
         }
         body.dark-mode .material-date,
@@ -491,8 +494,10 @@
             color: var(--dark-secondary-color);
         }
 
-        /* Responsive */
+        /* Responsive - Umum untuk Layar Kecil (Tablet & Mobile) */
         @media (max-width: 768px) {
+            .container { padding: 0 0.8rem; } /* Sedikit kurangi padding di container */
+            
             /* Header & Navigasi */
             .header-content {
                 flex-direction: column;
@@ -511,15 +516,16 @@
             nav ul {
                 justify-content: space-around;
                 width: 100%;
-                flex-wrap: nowrap;
+                flex-wrap: nowrap; /* Pastikan nav item tidak wrap ke bawah */
+                padding: 0 0.5rem; /* Tambah padding agar tidak terlalu mepet tepi */
             }
-            nav ul li { margin: 0 0.5rem; }
+            nav ul li { margin: 0 0.4rem; } /* Kurangi margin antar item nav */
             nav ul li a { font-size: 0.9rem; padding: 0.5rem 0; }
             #mode-toggle { 
                 order: 2;
                 position: absolute;
                 top: 1.25rem;
-                right: 1rem;
+                right: 0.8rem; /* Sesuaikan posisi agar tidak terlalu mepet */
                 font-size: 1.3rem;
                 width: 36px;
                 height: 36px;
@@ -548,17 +554,30 @@
             .materials-header { flex-direction: column; align-items: flex-start; }
             #search-input { max-width: 100%; margin-top: 0.5rem; }
             .form-actions { flex-direction: column; gap: 0.75rem; }
-            .btn { width: 100%; padding: 12px 15px; }
+            .btn { width: 100%; padding: 12px 15px; } /* Tombol memenuhi lebar di mobile */
 
             /* Material Card */
             .material-card {
                 margin: 0 auto;
-                max-width: 320px;
+                max-width: 320px; /* Batasi lebar kartu agar tidak terlalu lebar di tablet */
             }
             .materials-grid {
-                grid-template-columns: 1fr;
+                grid-template-columns: 1fr; /* Satu kolom untuk semua materi */
                 gap: 1.5rem;
             }
+            .material-info { padding: 1rem; } /* Kurangi padding di info card */
+            .material-actions {
+                flex-direction: row; /* Atur ulang tombol agar sejajar */
+                justify-content: center; /* Pusatkan tombol */
+                margin-top: 1rem;
+            }
+            .material-actions .btn {
+                width: auto; /* Tombol tidak lagi 100% lebar di dalam card action */
+                flex-grow: 1; /* Biarkan tombol tumbuh mengisi ruang */
+                padding: 8px 15px; /* Kurangi padding tombol aksi */
+                font-size: 0.9rem;
+            }
+
 
             /* Form & Editor */
             #material-form { padding: 1.5rem; }
@@ -569,11 +588,19 @@
             }
             .content-editable {
                 min-height: 200px;
+                padding: 12px;
             }
 
             /* View Material */
             .material-viewer { padding: 1.5rem; }
             .material-viewer h2 { font-size: var(--font-size-h2); }
+            .material-viewer img {
+                margin-top: 1rem;
+                margin-bottom: 1rem;
+            }
+            .material-viewer #material-content-viewer {
+                font-size: 0.95rem; /* Kurangi font size untuk konten */
+            }
 
             /* Footer */
             footer {
@@ -581,17 +608,47 @@
                 font-size: 0.8rem;
             }
         }
+
+        /* Responsive - Khusus untuk Layar Handphone Portrait (<= 480px) */
         @media (max-width: 480px) {
+            .container { padding: 0 0.5rem; } /* Padding yang lebih kecil untuk handphone */
+
             .logo { font-size: 1.4rem; }
             .logo .icon { font-size: 1.6rem; }
-            nav ul li a { font-size: 0.85rem; padding: 0.4rem 0; }
-            #mode-toggle { top: 1rem; right: 0.75rem; font-size: 1.2rem; width: 32px; height: 32px; }
-            .hero-section { padding: 2.5rem 1rem; }
+            nav ul li a { font-size: 0.8rem; padding: 0.4rem 0; }
+            #mode-toggle { top: 0.8rem; right: 0.5rem; font-size: 1.1rem; width: 30px; height: 30px; } /* Sesuaikan ukuran dan posisi toggle */
+
+            .hero-section { padding: 2.5rem 0.8rem; }
             .hero-section h1 { font-size: clamp(1.5rem, 7vw, 2rem); }
             .hero-section p { font-size: clamp(0.8rem, 2.5vw, 0.9rem); }
             .hero-section .btn { font-size: 0.9rem; padding: 10px 18px; }
-            .card { padding: 1.5rem; }
-            footer { font-size: 0.75rem; padding: 1rem; }
+
+            .card { padding: 1.2rem; } /* Kurangi padding card */
+            #material-form { padding: 1rem; } /* Kurangi padding form */
+            
+            .material-card {
+                max-width: none; /* Izinkan kartu mengisi lebar penuh (dengan padding container) */
+                width: 100%;
+            }
+
+            .material-actions {
+                flex-direction: column; /* Tombol aksi kembali ke kolom di layar sangat kecil */
+                gap: 0.5rem;
+            }
+            .material-actions .btn {
+                width: 100%; /* Tombol aksi mengisi lebar penuh lagi */
+                padding: 10px 15px;
+                font-size: 0.95rem;
+            }
+
+            .material-viewer { padding: 1rem; } /* Kurangi padding viewer */
+            .material-viewer h2 { font-size: 1.5rem; }
+            .material-viewer .material-date { margin-bottom: 1rem; }
+            .material-viewer #material-content-viewer {
+                font-size: 0.9rem; /* Lebih kecil lagi untuk konten */
+            }
+
+            footer { font-size: 0.7rem; padding: 0.8rem; }
         }
     </style>
 </head>
@@ -860,7 +917,7 @@
             let updateData = { title, content, updated_at: new Date().toISOString() };
             let newImageUrl = existingImageUrl;
             if (file) {
-                if (file.size > MAX_FILE.SIZE) { showNotification("Ukuran file maksimal 10MB!", true); return; }
+                if (file.size > MAX_FILE_SIZE) { showNotification("Ukuran file maksimal 10MB!", true); return; }
                 if (existingImageUrl && existingImageUrl.includes(SUPABASE_URL)) {
                     const oldFileName = existingImageUrl.split('/').pop();
                     const { error: deleteOldError } = await supabase.storage.from("materi").remove([oldFileName]);
