--- a/index.html
+++ b/index.html
@@ -973,7 +973,6 @@
             </div>
             <div class="modal-body">
                 <p>Apakah Anda yakin ingin menghapus materi ini? Tindakan ini tidak dapat dibatalkan.</p>
-                <p>Masukkan kode <strong>1506</strong> untuk mengonfirmasi penghapusan:</p>
                 <div class="code-input">
                     <input type="text" maxlength="1" id="code-1">
                     <input type="text" maxlength="1" id="code-2">
@@ -1032,7 +1031,7 @@
             <div class="hero-section fade-in">
                 <div class="hero-content">
                     <h1>Selamat Datang di Safety Zone</h1>
-                    <p>Simpan dan kelola semua materi pembelajaran Anda dengan aman dan mudah</p>
+                    <p>Simpan dan kelola semua materi dengan aman dan mudah</p>
                     <a href="#" class="btn btn-primary nav-link" data-page="add-material" style="margin-top: 1.5rem;">
                         <i class="fas fa-plus-circle"></i> Tambah Materi Baru
                     </a>
@@ -1795,3 +1794,4 @@
     </script>
 </body>
 </html>
+
